Added pics, CDNs to index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<header>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</header>
 <body>
-    <h1>Eric Zumbahlen</h1>
+    <span class="text-center"><h1>Eric Zumbahlen</h1></span>
     <nav class="navbar navbar-default" data-spy="affix">
         <div class="container-fluid ">
             <div class="navbar-header">
                 <ul class= "nav navbar-nav">
-                    <li href="#home">Home</li>
+                    <li> <a href="#home">Home</a></li>
                     <li></li>
                     <li></li>
                 </ul>
@@ -14,13 +17,21 @@
     <div>
         <div class="row">
             <div id="home" class="col">
-                <h1>column 1</h1>
+                <h2>column 1</h2>
                 <p>Stuff that populates column one!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
             </div>
             <div id="col2" class="col">
-                    <h1>column 1</h1>
+                    <h2>column 2</h2>
                     <p>Stuff that populates column two!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
             </div>
         </div>
     </div>
+    <div>
+        
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
