--- a/index.html
+++ b/index.html
@@ -20,30 +20,43 @@
                     <li class="nav-item"> <a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"> <a class="nav-link" href="#carouselDiv">Gallery</a></li>
                     <li class="nav-item"> <a class="nav-link" href="#Cards">Cards</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="z.html">About me</a> </li>
                 </ul>
             </nav>
         </div>
         
-            <div class="row">
-                <div id="home" class="col-lg-6">
+            <div class="row container-fluid">
+                <div id="home" class="col-xl-6">
                     <h2>My Background</h2>
-                    <p>
+                    <p class="pad">
                         I grew up in southern Illinois in a small town and actually hated computers. You see my Brother and father was into computers 
                         and I wanted to do something different. Turns out I shouldn't have as now I'm the one they come to for IT advice especially 
                         since I started programming. I played basketball growing up then while in high school I also got into Texas holdem and started learning
                         the math of poker, but have since forgot most. After high school I joined the Air Force and was supposed to go into Intel, but me being stupid
                         I said I wanted to leave as soon as possible instead of waiting for my job to open up. Because of that I ended up in Security Forces and 
-                        became a cop and that lead me to do nuclear security, anti-terrorism, and various training. After eight years 
+                        became a cop and that lead me to do nuclear security, anti-terrorism, and various training. After eight years I separated from the Air Force 
+                        with no plan other than knowing that I wanted to do something different. It was during this that I met my wife and she was
+                        a Catastrophe adjuster for State Farm. I traveled to a few places with her like California, and I spent about a year trying
+                        different things and I eventually bought a book on programming that I really enjoyed. Then I went to Free Code Camp and just dove into web
+                        development and loved it. I built my own computer and enrolled at Indiana State University in the Computer Science program
+                        was introduced to C. I liked C as the logic made sense and everything was spelled by the language where many other
+                        languages abstract and hide complexity. Eventually my wife accepted a promotion that led us here to Illinois State University
+                        where I transfered into IS Web Application Development due to some classes not transferring and I didn't want to spend more
+                        time in college than necessary.
                     </p>
                 </div>
-                <div id="col2" class="col-lg-6">
-                        <h2>My Family</h2>
-                        <p>Stuff that populates column two!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla tempora ipsam eaque, adipisci vitae officia nemo eveniet veritatis earum maxime similique, officiis, autem consequuntur distinctio nihil esse! Cupiditate, deserunt eos.</span>
-                        <span>Cum quae similique asperiores ducimus sequi in amet velit saepe eius! Expedita eius dolorem suscipit labore ex repellendus doloribus repellat aspernatur, porro, rem corporis unde odit accusamus nesciunt maxime aut?</span>
-                        <span>Omnis similique ratione tempora fugit neque deserunt expedita quasi, optio doloribus totam aliquid illum quaerat ipsam. Tempore possimus non nihil. Et, sit nisi perferendis vero fugit explicabo beatae! Doloremque, ipsa.</span>
-                        <span>Ut nihil reiciendis sint veniam impedit, ullam aut veritatis sed cum nobis expedita voluptatibus saepe alias autem eaque natus aspernatur nulla odio eligendi quas facere quibusdam architecto dolorum? Distinctio, laudantium?</span>
-                        <span>Inventore quo excepturi vero aspernatur deleniti, at numquam maxime enim natus, expedita labore pariatur error blanditiis cum fugit sequi similique. Nulla quos ratione perspiciatis eius tempore voluptatem numquam similique. Doloremque!</span>
+                <div id="col2" class="col-xl-6">
+                        <h2>Development Experience</h2>
+                        <p>
+                            Most of what I've done is play around with various web technologies like Wordpress and Xamp. I've built
+                            a couple different websites but most of them have been static sites with only a couple being server side.
+                            What I've built has been mainly school projects such as the LinkU from IT 353. I have built a little bit 
+                            of a blog like site that is built using the Spring framework. I used the Spring Framework at State Farm, which
+                            is also where I had to learn it for my internship, and was very surprised at how complex and robust it is.
+                            The team I was working with were using it to create Virtual Machines and then deploy it to a server for 
+                            various applications. This was used by the entire enterprise and was a very fast paced and knowledge intense
+                            group. I learned a lot from them and am very appreciative of the experience I recieved while there. 
+                        </p>
                 </div>
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
             </div>
@@ -121,7 +134,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Some things about me</h5>
                     <p class="card-text">This is a little about my future job, interests, coding. </p>
-                    <a href="https://www.freecodecamp.org/" class="btn btn-primary">check it out</a>
+                    <a href="z.html" class="btn btn-primary">check it out</a>
                 </div>
         </div>
         
