--- a/z.html
+++ b/z.html
@@ -16,12 +16,62 @@
         <nav id="navMenu" class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class= "nav navbar-nav">
                 <li class="nav-item"> <a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"> <a class="nav-link" href="#carouselDiv">Gallery</a></li>
-                <li class="nav-item"> <a class="nav-link" href="#Cards">Cards</a></li>
+                
             </ul>
         </nav>
     </div>
+    <div class="row">
+        <div class="col"><div id="Cards" class="card mx-auto" style="width: 18rem;">
+            <img class="card-img-top" src="pics/sfImage.jpg" alt="State Farm Image">
+            <div class="card-body">
+                <h5 class="card-title">Future Job</h5>
+                <p class="card-text">I have accepted a position at State Farm and will be working on the front end of a .net web application</p>
+                <a href="https://www.statefarm.com/" class="btn btn-primary">check it out</a>
+            </div>
+    </div></div>
+    <div class="col"><div id="Cards" class="card mx-auto" style="width: 18rem;">
+            <img class="card-img-top" src="pics/ytube.png" alt="YouTube Image">
+            <div class="card-body">
+                <h5 class="card-title">Pastime</h5>
+                <p class="card-text">This is where I go for entertainment, news, education, etc. YouTube is an amazing resource that I use daily
+                    for basically anything that I want.
+                </p>
+                <a href="https://www.youtube.com/" class="btn btn-primary">check it out</a>
+            </div>
+    </div></div>
+    <div class="col"><div id="Cards" class="card mx-auto" style="width: 18rem;">
+            <img class="card-img-top" src="pics/freecode.jpeg" alt="Free Code Camp logo">
+            <div class="card-body">
+                <h5 class="card-title">Where I got started</h5>
+                <p class="card-text">This was where I truly got started coding and learning on my own to build apps. </p>
+                <a href="https://www.freecodecamp.org/" class="btn btn-primary">check it out</a>
+            </div>
+    </div></div>
+    </div>
 
+    <div class="row">
+        <div class="col">
+            <h2>What tech I like</h2>
+            <p>
+                I am a huge fan of Raspberry Pis and have three at home one of which I am using as a webserver and is currently
+                hosting a website for a class project. I have plans to build a magic mirror that is on hold till I have some free
+                time. If you don't know a magic mirror is a TV with a two-way mirror over the screen and a Raspberry Pi connected to
+                it. This gives the appearance that the "mirror" has words or images magically appearing. This can display weather, traffic,
+                email, schedule, and a myriad other things that one could want. Another tech that I am a fan of is Spring and I am constantly
+                impressed with how much it can do and how quickly an enterprise level API can be set up.
+            </p>
+        </div>
+        <div class="col">
+            <h2>My Family</h2>
+            <p>
+                I met my wife in early 2015 less than a year after separating from the Air Force and have regretted it ever since
+                (Just kidding!). I am lucky to have her and we have an eleven month old boy that is the happiest baby ever that
+                I can't wait to teach how to program and tinker with things that I'm sure will drive his mother batty. I grew up 
+                with two older brothers one of which is into technology but doesn't have the drive to pursue it while the other
+                is an athletic director. Its safe to say his passion is not remotely in tech. 
+            </p>
+        </div>
+    </div>
     
 
 
